[package]
name = "cxp"
version = "0.1.0"
edition = "2021"
authors = ["SteveLauC <stevelauc@outlook.com>"]
description = "Bring the Copy, Cut and Paste functionalities from your GUI file manager to your Terminal."
readme = "README.md"
license = "GPL-2.0-only"
repository = "https://github.com/SteveLauC/cxp"
categories = ["command-line-utilities"]
keywords = ["command-line-tool", "copy", "paste", "cut"]

[dependencies]
dirs = "4.0.0"
